ajout de l'option pour tester la vraie url

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-# Activez le mode mock pour les tests locaux via Postman
 MOCK_ORDER_SERVICE=true
-
-# Vous pouvez laisser ORDER_SERVICE_URL vide ou préciser une URL factice
 ORDER_SERVICE_URL=http://fake-order-service 
+
+# QUAND NADA ET FATMA AURONT TERMINES LEURS SERVICES : 
+
+#MOCK_ORDER_SERVICE=false
+#ORDER_SERVICE_URL=http://microsrvcommande-5d7aa803.koyeb.app
