--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 urlServeur = http://localhost:3000
+MOCK_ORDER_SERVICE=true
+ORDER_SERVICE_URL=http://fake-order-service 
+
+# QUAND NADA ET FATMA AURONT TERMINES LEURS SERVICES : 
+
+#MOCK_ORDER_SERVICE=false
+#ORDER_SERVICE_URL=http://microsrvcommande-5d7aa803.koyeb.app
