fix version qui marche

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 urlServeur = http://localhost:3000
-MOCK_ORDER_SERVICE=true
-ORDER_SERVICE_URL=http://fake-order-service 
+# MOCK_ORDER_SERVICE=true
+# ORDER_SERVICE_URL=http://fake-order-service 
 
 # QUAND NADA ET FATMA AURONT TERMINES LEURS SERVICES : 
 
-#MOCK_ORDER_SERVICE=false
-#ORDER_SERVICE_URL=http://microsrvcommande-5d7aa803.koyeb.app
+MOCK_ORDER_SERVICE=false
+ORDER_SERVICE_URL=http://microsrvcommande-5d7aa803.koyeb.app
+STOCK_SERVICE_URL=http://donoma.ddns.net/api
