--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ urlServeur = http://localhost:3000
 MOCK_ORDER_SERVICE=false
 ORDER_SERVICE_URL=http://microsrvcommande-5d7aa803.koyeb.app
 STOCK_SERVICE_URL=http://donoma.ddns.net/api
+DATABASE_URL=postgresql://shipping_bdd_user:i8sTiahMLLYbsC1iMOU5LyjVsSXzXiAQ@dpg-cuuqdi5svqrc73dpp250-a.frankfurt-postgres.render.com/shipping_bdd
