--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.7.9",
     "httpservice": "^0.1.3",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
